crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.2.11__django__templatetags__static.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.2.11/django/templatetags/static.py
---
tag_rules: {}
filter_arities: {}
block_specs: {}
